# schedule-backend

./: .env.tmpleate  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  pyproject.toml  requarements.txt
app/: config.py  database.py  exceptions.py  main.py  models.py  repository.py  schemas.py  services.py
app/auth/: models.py  router.py  schemas.py  services.py
app/deegre/: dependencies.py  models.py  repository.py  router.py  schemas.py  services.py
app/direction/: dependencies.py  models.py  repository.py  router.py  schemas.py  services.py
app/structure/: dependencies.py  models.py  repository.py  router.py  schemas.py  services.py
docs/: diagram.drawio
migrations/: env.py
migrations/versions/: 2023_08_25_0057_init.py  2023_08_28_1752_add_deegre_table.py  2023_08_28_1833_unique_for_deegre_name.py  2023_08_31_1710_add_table_structures.py  2023_12_03_2227_added_direction_table.py
tests/: conftest.py  test_deegre.py
tests/deegre/: test_database.py  test_endpoints.py  test_services.py
tests/structure/: test_endpoints.py
