[tool.poetry]
name = "schedule-backend"
version = "0.1.0"
description = "FastApi schedule backend"
authors = ["Kazantsev Artem <me@lokach.ru>"]
readme = "README.md"
packages = [{include = "schedule_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["full"], version = "^0.101.1"}
sqlalchemy = "^2.0.20"
alembic = {extras = ["sqlalchemy"], version = "^1.11.3"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.1"}
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"
ruff = "^0.0.285"
pylint = "^2.17.5"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
venv = "/home/lokach/.cache/pypoetry/virtualenvs/schedule-backend-J5e_nTnD-py3.11"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "B"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = []
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 89

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"
