[tool.poetry]
name = "schedule-backend"
version = "0.1.0"
description = "FastApi schedule backend"
authors = ["Kazantsev Artem <me@lokach.ru>"]
readme = "README.md"
packages = [{include = "schedule_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
sqlalchemy = "^2.0.20"
alembic = {extras = ["sqlalchemy"], version = "^1.11.3"}
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
isort = "^5.12.0"
pylint = "^2.17.5"
neovim = "^0.3.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
debugpy = "^1.6.7.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.ruff]
select = ["F", "E", "W", "I", "N", "PL", "C", "B", "D"]

# Same as Black.
line-length = 89

[tool.pytest.ini_options]
pythonpath = [
    ".", "app"
]
asyncio_mode="auto"

